add_executable(ctrl_flow_entry ctrl_flow_entry.cpp)
target_link_libraries(ctrl_flow_entry rp4)

add_executable(ctrl_vlan ctrl_vlan.cpp)
target_link_libraries(ctrl_vlan rp4)

add_executable(ctrl_counter ctrl_counter.cpp)
target_link_libraries(ctrl_counter rp4)

add_executable(ctrl_complex_fwd ctrl_complex_fwd.cpp)
target_link_libraries(ctrl_complex_fwd rp4)

add_executable(ctrl_complex_vlan ctrl_complex_vlan.cpp)
target_link_libraries(ctrl_complex_vlan rp4)

add_executable(ctrl_complex_tunnel ctrl_complex_tunnel.cpp)
target_link_libraries(ctrl_complex_tunnel rp4)

add_executable(ctrl_complex_counter ctrl_complex_counter.cpp)
target_link_libraries(ctrl_complex_counter rp4)

add_executable(ctrl_complex_counter_monitor ctrl_complex_counter_monitor.cpp)
target_link_libraries(ctrl_complex_counter_monitor rp4)
